# nrf51-sdk

./: CMakeLists.txt  module.json
source/nordic_sdk/components/ble/device_manager/: device_manager_peripheral.c
source/nordic_sdk/components/ble/device_manager/config/: device_manager_cnfg.h
source/nordic_sdk/components/toolchain/: nrf_delay.h  system_nrf51.h
